# staple

./: CMakeLists.txt  README.md  bench.cpp  export.cpp  main.cpp  precise.yaml  resize_main.cpp  staple.yaml
staple/: CMakeLists.txt  fhog.cpp  fhog.h  sse.hpp  staple_tracker.cpp  staple_tracker.hpp
